Infrastructure-as-code/Cloudformation/Cloudformation-with-nested-stacks/VPC.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC FOR TASK 
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: customVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ["", ["custom","PHP","IGW"]]
          
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  
  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - '0'
        - !GetAZs ''
      MapPublicIpOnLaunch: true  
      Tags:
        - Key: Name
          Value: customPubSubnet1

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select
        - '1'
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: customPubSubnet2


  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select
        - '4'
        - !GetAZs ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: customPVSubnet1

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRT

  PrivateRouteTable:    
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateRT



  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet01


  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0 
      NatGatewayId: !Ref NatGateway

  PublicSubnetRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable


  PublicSubnetRouteTableAssociation02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  


  PrivateSubnetRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable





  DefaultNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: NaclsForPUBSub 

  

  PVNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: NaclsForPVSub


  # PVSubnetNetworkAclAssociation:
  #    Type: AWS::EC2::SubnetNetworkAclAssociation
  #    Properties:
  #     SubnetId: !Ref PrivateSubnet01
  #     NetworkAclId: !Ref PVNacl

  # PubSubnetNetworkAclAssociation2:
  #   Type: AWS::EC2::SubnetNetworkAclAssociation
  #   Properties:
  #     SubnetId: !Ref PublicSubnet02
  #     NetworkAclId: !Ref DefaultNetworkAcl

  # PubSubnetNetworkAclAssociation1:
  #   Type: AWS::EC2::SubnetNetworkAclAssociation
  #   Properties:
  #     SubnetId: !Ref PublicSubnet01
  #     NetworkAclId: !Ref DefaultNetworkAcl

  APLBSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      VpcId: !Ref VPC
      GroupDescription: Enable port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: APLBSG


  WEBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable port 80 and 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          #CidrIp: 0.0.0.0/0
          SourceSecurityGroupId: 
             Ref: "APLBSG"          
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          #CidrIp:0.0.0.0/0
          CidrIp: 39.32.19.54/32

      Tags:
        - Key: Name
          Value: WEBSG

  
  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable port 3306 and 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId:  
            Ref: "WEBSG"
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId:
            Ref: "WEBSG"
      Tags:
        - Key: Name
          Value: DBSG



Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Sub 'customVPC-VPC'

  StackPubSub:
    Description: The ID of the Public Subnet
    Value: !Ref PublicSubnet01
    Export:
      Name: !Sub 'customVPC-PublicSubnet01'


  StackPubSub2:
    Description: The ID of the Public Subnet 02
    Value: !Ref PublicSubnet02
    Export:
      Name: !Sub 'customVPC-PublicSubnet02'

  StackPVSubnet:
    Description: The ID of the Prviate Subnet
    Value: !Ref PrivateSubnet01
    Export:
      Name: !Sub 'customVPC-PrivateSubnet01'
  
  StackAPLBSG:
  
    Value: !Ref APLBSG
    Export:
      Name: !Sub 'customVPC-APLBSG'

  StackPWEBSG:

    Value: !Ref WEBSG
    Export:
      Name: !Sub 'customVPC-WEBSG'


  StackDBSG:

    Value: !Ref DBSG
    Export:
      Name: !Sub 'customVPC-DBSG'


  APLBSGr:
    Value: !Ref "APLBSG"


  WEBSGr:
    Value: !Ref "WEBSG"

  DBSGr:
    Value: !Ref "DBSG"

  PUBSUB01r:
    Value: !Ref "PublicSubnet01"

  PUBSUB02r:
    Value: !Ref "PublicSubnet02"

  PVSUB01r:
    Value: !Ref "PrivateSubnet01"

  VpcN:
    Value: !Ref "VPC"
